open-im-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "msg-gateway"
  name: msg-gateway-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: msg-gateway-openim.36x9.com
      http:
        paths:
          - backend:
              service:
                name: msg-gateway
                port:
                  number: 10001
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
  name: api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api-openim.36x9.com
      http:
        paths:
          - backend:
              service:
                name: api
                port:
                  number: 10002
            path: /
            pathType: Prefix
